Add source code and data section

--- a/Mining PTT News.ipynb
+++ b/Mining PTT News.ipynb
@@ -4,6 +4,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Source Code and the Prepared Data\n",
+    "\n",
+    "1. All of the source code: https://github.com/moskytw/mining-news\n",
+    "2. Data: Please ask from coaches.\n",
+    "\n",
     "# Data Mining Process\n",
     "\n",
     "1. Define Problem\n",
