--- a/Mining PTT News – Couch Version.ipynb
+++ b/Mining PTT News – Couch Version.ipynb
@@ -249,6 +249,7 @@
    ],
    "source": [
     "sorted_term_count_arr = np.sort(term_count_arr)\n",
+    "# doc: http://pandas.pydata.org/pandas-docs/stable/visualization.html\n",
     "s = pd.Series(sorted_term_count_arr)\n",
     "s.plot()"
    ]
