Blank for students

--- a/Mining PTT News.ipynb
+++ b/Mining PTT News.ipynb
@@ -291,7 +291,7 @@
    ],
    "source": [
     "vectorizer = CountVectorizer(\n",
-    "    min_df=1, max_df=0.8,\n",
+    "    _____, _____\n",
     "    token_pattern=r'(?u)\\b\\w+\\b',\n",
     "    ngram_range=(1, 2)\n",
     ")\n",
@@ -384,7 +384,7 @@
     "\n",
     "# doc: http://scikit-learn.org/stable/modules/generated/sklearn.feature_extraction.text.TfidfVectorizer.html\n",
     "vectorizer = TfidfVectorizer(\n",
-    "    min_df=1, max_df=0.8,\n",
+    "    _____, _____,\n",
     "    token_pattern=r'(?u)\\b\\w+\\b',\n",
     "    ngram_range=(1, 2)\n",
     ")"
@@ -411,7 +411,7 @@
    "outputs": [],
    "source": [
     "with open('target.txt') as f:\n",
-    "    y = [int(line) >= 0 for line in f]"
+    "    y = [_____ for line in f]"
    ]
   },
   {
@@ -434,7 +434,7 @@
     "from sklearn.model_selection import train_test_split\n",
     "\n",
     "# doc: http://scikit-learn.org/stable/modules/generated/sklearn.model_selection.train_test_split.html\n",
-    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.3, random_state=0)"
+    "X_train, X_test, y_train, y_test = train_test_split(_____, _____, test_size=0.3, random_state=0)"
    ]
   },
   {
@@ -467,13 +467,13 @@
     "from sklearn import svm\n",
     "\n",
     "# doc: http://scikit-learn.org/stable/modules/generated/sklearn.svm.SVC.html\n",
-    "svc = svm.SVC(kernel='linear', C=1, class_weight='balanced')\n",
-    "svc.fit(X_train, y_train)\n",
+    "svc = svm.SVC(kernel=_____, C=_____, class_weight='balanced')\n",
+    "svc.fit(_____, _____)\n",
     "\n",
     "print('SVC')\n",
     "# doc: http://scikit-learn.org/stable/modules/model_evaluation.html#accuracy-score\n",
-    "print('Traning Set Accuracy:', svc.score(X_train, y_train))\n",
-    "print('Validation Accuracy:', svc.score(X_test, y_test))"
+    "print('Traning Set Accuracy:', svc.score(_____, _____))\n",
+    "print('Validation Accuracy:', svc.score(_____, _____))"
    ]
   },
   {
@@ -542,7 +542,7 @@
     "print('Top', n, 'positive features:')\n",
     "print()\n",
     "\n",
-    "for fidx in sorted_feature_idx_arr[:-n:-1]:\n",
+    "for fidx in sorted_feature_idx_arr[_____]:\n",
     "    print(feature_names[fidx], svc.coef_[class_i, fidx])\n",
     "    \n",
     "print()\n",
@@ -550,7 +550,7 @@
     "print('Top', n, 'negative features:')\n",
     "print()\n",
     "\n",
-    "for fidx in sorted_feature_idx_arr[:n]:\n",
+    "for fidx in sorted_feature_idx_arr[_____]:\n",
     "    print(feature_names[fidx], svc.coef_[class_i, fidx])"
    ]
   },
@@ -585,13 +585,13 @@
    ],
    "source": [
     "# doc: http://scikit-learn.org/stable/modules/generated/sklearn.svm.LinearSVC.html\n",
-    "lsvc = svm.LinearSVC(C=1, penalty='l1', dual=False)\n",
-    "%time lsvc.fit(X_train, y_train)\n",
+    "lsvc = svm.LinearSVC(C=_____, penalty=_____, dual=False)\n",
+    "%time lsvc.fit(_____, _____)\n",
     "print()\n",
     "\n",
     "print('Leaner SVC')\n",
-    "print('Traning Set Accuracy:', lsvc.score(X_train, y_train))\n",
-    "print('Validation Accuracy:', lsvc.score(X_test, y_test))"
+    "print('Traning Set Accuracy:', lsvc.score(_____, _____))\n",
+    "print('Validation Accuracy:', lsvc.score(_____, _____))"
    ]
   },
   {
@@ -619,16 +619,16 @@
     "\n",
     "# doc: http://scikit-learn.org/stable/modules/generated/sklearn.feature_selection.SelectFromModel.html\n",
     "sfm = SelectFromModel(lsvc, prefit=True)\n",
-    "X_train_2 = sfm.transform(X_train)\n",
+    "_____ = sfm.transform(_____)\n",
     "\n",
-    "lsvc_2 = svm.LinearSVC(C=1, penalty='l1', dual=False)\n",
-    "%time lsvc_2.fit(X_train_2, y_train)\n",
+    "lsvc_2 = svm.LinearSVC(C=_____, penalty=_____, dual=False)\n",
+    "%time lsvc_2.fit(_____, _____)\n",
     "print()\n",
     "\n",
-    "X_test_2 = sfm.transform(X_test)\n",
+    "_____ = sfm.transform(_____)\n",
     "print('Leaner SVC #2')\n",
-    "print('Traning Set Accuracy:', lsvc_2.score(X_train_2, y_train))\n",
-    "print('Validation Accuracy:', lsvc_2.score(X_test_2, y_test))"
+    "print('Traning Set Accuracy:', lsvc_2.score(_____, _____))\n",
+    "print('Validation Accuracy:', lsvc_2.score(_____, _____))"
    ]
   },
   {
@@ -663,8 +663,8 @@
     "# Grid Search: http://scikit-learn.org/stable/modules/grid_search.html\n",
     "# doc: http://scikit-learn.org/stable/modules/generated/sklearn.model_selection.GridSearchCV.html\n",
     "gscv = GridSearchCV(\n",
-    "    svm.LinearSVC(C=1),\n",
-    "    {'C': [1, 10, 100, 1000]},\n",
+    "    svm.LinearSVC(C=_____),\n",
+    "    {'C': _____},\n",
     "    cv=5\n",
     ")\n",
     "gscv.fit(X_train, y_train)\n",
@@ -693,12 +693,12 @@
    ],
    "source": [
     "best_lsvc = svm.LinearSVC(**gscv.best_params_)\n",
-    "best_lsvc.fit(X_train, y_train)\n",
+    "best_lsvc.fit(_____, _____)\n",
     "\n",
     "print('Best Leaner SVC')\n",
     "print('Parameters:', gscv.best_params_)\n",
-    "print('Traning Set Accuracy:', best_lsvc.score(X_train, y_train))\n",
-    "print('Validation Accuracy:', best_lsvc.score(X_test, y_test))"
+    "print('Traning Set Accuracy:', best_lsvc.score(_____, _____))\n",
+    "print('Validation Accuracy:', best_lsvc.score(_____, _____))"
    ]
   },
   {
