Add a new practice

--- a/Mining PTT News – Couch Version.ipynb
+++ b/Mining PTT News – Couch Version.ipynb
@@ -968,9 +968,10 @@
    "source": [
     "# Your Turn\n",
     "\n",
-    "1. Add more features? e.g., adding `author_id` by [Dict Vectorizer](http://scikit-learn.org/stable/modules/feature_extraction.html#dict-feature-extraction).\n",
-    "2. Predict more categories? e.g., sum(push scores) >= 10.\n",
-    "3. Try other kernel of SVM? e.g., [RBF](http://scikit-learn.org/stable/modules/svm.html#svm-kernels).\n",
+    "1. Try to use [.predict](http://scikit-learn.org/stable/modules/generated/sklearn.svm.LinearSVC.html#sklearn.svm.LinearSVC.predict) to predict an unknown news.\n",
+    "2. Add more features? e.g., adding `author_id` by [Dict Vectorizer](http://scikit-learn.org/stable/modules/feature_extraction.html#dict-feature-extraction).\n",
+    "3. Predict more categories? e.g., sum(push scores) >= 10.\n",
+    "4. Try other kernel of SVM? e.g., [RBF](http://scikit-learn.org/stable/modules/svm.html#svm-kernels).\n",
     "\n",
     "# References\n",
     "\n",
