Update the descs

--- a/Mining PTT News – Coach Version.ipynb
+++ b/Mining PTT News – Coach Version.ipynb
@@ -12,8 +12,8 @@
     "\n",
     "# The Code and Data\n",
     "\n",
-    "- The code → https://github.com/moskytw/mining-news\n",
-    "- The prepared data → ask from coaches.\n",
+    "- The code and the minimal data → https://github.com/moskytw/mining-news\n",
+    "- The full data → ask from coaches.\n",
     "\n",
     "\n",
     "# Machine Learning Process\n",
