Add figures and explanations

--- a/Mining PTT News – Coach Version.ipynb
+++ b/Mining PTT News – Coach Version.ipynb
@@ -728,7 +728,11 @@
    "source": [
     "## First Try\n",
     "\n",
-    "SVM: [Support Vector Machines – scikit-learn](http://scikit-learn.org/stable/modules/svm.html#support-vector-machines)"
+    "SVM: [Support Vector Machines – scikit-learn](http://scikit-learn.org/stable/modules/svm.html#support-vector-machines)\n",
+    "\n",
+    "### SVM's Hyper-Plane\n",
+    "\n",
+    "![SVM's Hyper-Plane](http://scikit-learn.org/stable/_images/sphx_glr_plot_separating_hyperplane_0011.png)"
    ]
   },
   {
@@ -779,6 +783,21 @@
     "print()\n",
     "\n",
     "print(classification_report(y_test, svc.predict(X_test)))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Precision and Recall\n",
+    "\n",
+    "![Precision and Recall](https://upload.wikimedia.org/wikipedia/commons/2/26/Precisionrecall.svg)\n",
+    "\n",
+    "### F1 Score\n",
+    "\n",
+    "![F1Score](https://wikimedia.org/api/rest_v1/media/math/render/svg/7d63c1f5c659f95b5dfe5893213cc8ea7f8bea0a)\n",
+    "\n",
+    "A F1 score is the harmonic mean of precision and recall. See [F1 score](https://en.wikipedia.org/wiki/F1_score) for details."
    ]
   },
   {
